--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@ color: aliceblue;
 }
 
 .cartao{
+    margin: 1rem 1rem;
     background-color: rgb(204, 196, 78);
     height: 20rem;
     flex-grow: 1;
